--- a/src/main/resources/settings.properties
+++ b/src/main/resources/settings.properties
@@ -3,5 +3,5 @@ connection.url=jdbc:hsqldb:file:db/usermanagement
 connection.user=sa
 connection.password=
 
-
+dao.factory=ua.nure.kn156.doroshenko.db.DaoFactoryImpl
 ua.nure.kn156.doroshenko.db.UserDAO=ua.nure.kn156.doroshenko.db.HsqldbUserDao
